test/files/pos/t3108.scala
object A {
  val a: NotNull = ""
  val b: NotNull = 41
}

