test/files/neg/bug3189.scala
object A {
  val Array(a,b*) = ("": Any)
}